[project]
name = "incrementalstats"
version = "0.0.1"
authors = [
  { name = "Cees-Bart Breunesse", email = "ceeesb@gmail.com" },
]
description = "A few incremental statistics using numpy"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/xxx/pyincrementalstats"
"Bug Tracker" = "https://github.com/xxx/pyincrementalstats/issues"
